--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         }
 
         .refresh-btn {
-            background-color: #667eea;
+            background-color: #3755df;
             color: white;
             border: none;
             padding: 8px 15px;
@@ -74,7 +74,7 @@
         }
 
         .refresh-btn:hover {
-            background-color: #5a6fd8;
+            background-color: #162ea4;
         }
 
         .product-table {
@@ -294,13 +294,30 @@
                 flex-direction: column;
             }
         }
+
+        .btn{
+              background: linear-gradient(135deg, #ca1010 0%, #d25019 100%);
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background-color 0.3s;
+            margin-top: 15px;
+        }
+        .link{
+            text-decoration: none;
+            color: #ffffff;
+            font-weight: 600;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <h1>Hisob Kitob Ilovasi</h1>
-            <p>Kompyuter uchun premium shakl</p>
+            <p>Royhatga o'lish bo'limi</p>
+            <button class="btn"><a class="link" href="index2.html">Skanerlash bo'limiga o'tish</a></button>
         </div>
 
         <div class="list-section">
