--- a/index.html
+++ b/index.html
@@ -305,6 +305,9 @@
             transition: background-color 0.3s;
             margin-top: 15px;
         }
+        .btn:hover {
+            background: linear-gradient(135deg, #8b0808 0%, #b23a12 100%);
+        }
         .link{
             text-decoration: none;
             color: #ffffff;
